Fix darker backgrounds on dark mode

--- a/packages/fast-bridge-app/src/index.css
+++ b/packages/fast-bridge-app/src/index.css
@@ -66,7 +66,7 @@
 body,
 #root {
   width: 100svw;
-  height: 100svh;
+  min-height: 100svh;
   overflow-x: clip;
 }
 
